--- a/plugin.yml
+++ b/plugin.yml
@@ -1,12 +1,11 @@
 name: Wild
 main: SkyLightMCPE\Main
-version: 1.0.0
-api: [3.0.0-ALPHA11, 3.0.0-ALPAH12]
+version: 1.2
+api: [3.0.0-ALPHA11, 3.0.0-ALPAH12, 4.0.0]
 author: 
 - SkyLightMCPE
-- Unickorn
 website: https://github.com/SkyLightMCPE
 commands:
  wild:
   usage: /wild 
-  description: Teleports you in a random place!
+  description: Teleports you in a random place without getting any fall damage if teleported in the air!
